# ChernoOpenGL-CMake

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  readme.md
doc/: changelog.md  note.sh
res/Shaders/: Basic.shader  Batch-Textures.shader  Batch.shader
src/: Application.cpp  IndexBuffer.hpp  Renderer.hpp  Shader.hpp  Texture.hpp  Utility.hpp  VertexArray.hpp  VertexBuffer.hpp  VertexBufferLayout.hpp  readme.md
src/tests/: Includes.cpp  Test-Batching-Textures-dynamic.hpp  Test-Batching-Textures.hpp  Test-Batching.hpp  Test-ClearColor.hpp  Test-Texture2D.hpp  Test.hpp
